welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: reassignment to val
if(vacation=false) {
           ^alarmClock:3: error: type mismatch;
 found   : Int(5)
 required: Boolean
	if(1<=day<=5) {
                   ^alarmClock:9: error: type mismatch;
 found   : Int(5)
 required: Boolean
	if(1<=day<=5) {
                   ^alarmClock:12: error: not found: value off
		return off
                       ^